--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,11 +22,13 @@
   </article>
 </div><!-- /#main -->
 
-#<div class="footer-wrap">
-#  <footer>
-#    {% include _footer.html %}
-#  </footer>
-#</div><!-- /.footer-wrap -->
+<!---
+<div class="footer-wrap">
+  <footer>
+    {% include _footer.html %}
+  </footer>
+</div><!-- /.footer-wrap -->
+--->
 
 {% include _scripts.html %}
 
