--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,18 +17,10 @@
     {% include _author-bio.html %}
   </div>
   <article class="page">
-    <h1>{{site.title}}</h1>
+    <!--<h1>{{site.title}}</h1>-->
     {{content}}
   </article>
 </div><!-- /#main -->
-
-<!---
-<div class="footer-wrap">
-  <footer>
-    {% include _footer.html %}
-  </footer>
-</div><!-- /.footer-wrap -->
---->
 
 {% include _scripts.html %}
 
