--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
   </div>
   <article class="page">
     <!--<h1>{{site.title}}</h1>-->
-    {{content}}
+    {{Helloooooooooo}}
   </article>
 </div><!-- /#main -->
 
