--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,6 +20,7 @@
   <article class="page">
     <!--<h1>{{site.title}}</h1>-->
     {{content}}
+    <p>This is a content paragrapah</p>
   </article>
 </div><!-- /#main -->
 
