--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@
   <article class="page">
     <!--<h1>{{site.title}}</h1>-->
     {{content}}
-    <p>This is a content paragrapah</p>
+    <p>Hello! My name is Sam Weisenthal. I am interested in the probabilistic/statistical foundations of medical decision making.</p>
   </article>
 </div><!-- /#main -->
 
