--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,8 +20,8 @@
   <article class="page">
     <!--<h1>{{site.title}}</h1>-->
     {{content}}
-    <p>Hello! My name is Sam Weisenthal. I am interested in the probabilistic/statistical foundations of medical decision making.</p>
-    <p>My work includes <a,href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative Sparsity</a>.</p>
+    <p>Hello! My name is Sam Weisenthal. I am in the MD/PhD program and the University of Rochester.</p>
+    <p>My research focus is on the probabilistic/statistical foundations of medical decision making. Recent projects include <a,href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative Sparsity</a>.</p>
   </article>
 </div><!-- /#main -->
 
