--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@
   <article class="page">
     <!--<h1>{{site.title}}</h1>-->
     {{content}}
-    <p>Hello! My name is Sam Weisenthal. I am in the MD/PhD program and the University of Rochester.</p>
+    <p>Hello! My name is Sam Weisenthal. I am in the MD/PhD program at the University of Rochester.</p>
     <p>My research focus is on the probabilistic/statistical foundations of medical decision making. Recent projects include <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative Sparsity</a>.</p>
   </article>
 </div><!-- /#main -->
