--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@
     <p>Hello! My name is Sam Weisenthal. I am studying statistics and medicine at the University of Rochester.</p>
     <p>My research focus is on the probabilistic/statistical foundations of medical decision making.</p> 
     <p>Recent projects include <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative Sparsity for Medical Decision Problems</a>, 
-      <a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting Acute Kidney Injury with Electronic Health Record Data</a>, and the <a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure Extraction Engine</a>.</p>
+      <a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting Acute Kidney Injury with Electronic Health Record Data</a>, and a <a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure Extraction Engine</a>.</p>
   </article>
 </div><!-- /#main -->
 
