--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@
     <p>Recent projects include
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative Sparsity for Medical Decision Problems</a></li>
-  <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting Acute Kidney Injury with Electronic Health Record Data</a></li>
+  <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR Data</a></li>
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure Extraction Engine</a></li>
 </ul>
   </article>
