--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,12 +22,13 @@
     {{content}}
     <p>Hello! My name is Sam Weisenthal. I am studying statistics and medicine at the University of Rochester.</p>
     <p>My research focus is on the probabilistic/statistical foundations of medical decision making.</p> 
-    <p>Recent projects include
+    <p>Recent papers include
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative Sparsity for Medical Decision Problems</a></li>
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR Data</a></li>
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure Extraction Engine</a></li>
 </ul>
+    </p>
   </article>
 </div><!-- /#main -->
 
