--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,11 +24,29 @@
     <p>My research focus is on the probabilistic/statistical foundations of medical decision making.</p> 
     <p>Recent papers include
       <ul>
-  <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative Sparsity for Medical Decision Problems</a></li>
+  <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR Data</a></li>
-  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure Extraction Engine</a></li>
+  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure extraction engine</a></li>
 </ul>
     </p>
+    <p>Work in progress includes
+      <ul>
+  <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity</a></li>
+  <li>Optimality-based reward learning</li>
+  <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">Post-test probability of covid-19</a></li>
+       <li>My journey from data science to statistics in an academic medical center (essay)</li> 
+      </ul>
+    <p>Online discussions include
+      <ul>
+  <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration in sklearn</a>, <a href="https://stats.stackexchange.com/questions/390487/why-is-logistic-regression-well-calibrated-and-how-to-ruin-its-calibration">On ruining calibration</a> </li>
+  <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction</a></li>
+   <li><a href="https://stats.stackexchange.com/questions/295383/why-is-data-augmentation-classified-as-a-type-of-regularization/295394#295394">On data augmentation as regularization</a></li>     
+      </ul>
+    
+    </p>
+
+    
+    
   </article>
 </div><!-- /#main -->
 
