--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,7 @@
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure extraction engine</a></li>
 </ul>
     </p>
-    <p>Work in progress includes
+    <p>Works in progress include
       <ul>
   <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity</a></li>
   <li>Optimality-based reward learning</li>
