--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,6 +35,7 @@
   <li>Optimality-based reward learning</li>
   <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">Post-test probability of covid-19</a></li>
        <li>My journey from data science to statistics in an academic medical center (essay)</li> 
+  <li><a href="https://arxiv.org/pdf/2108.12045.pdf">On inverse gamma priors</li>
       </ul>
     <p>Online discussions include
       <ul>
