--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,7 +39,7 @@
       </ul>
     <p>Online discussions include
       <ul>
-  <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration in sklearn</a>, <a href="https://stats.stackexchange.com/questions/390487/why-is-logistic-regression-well-calibrated-and-how-to-ruin-its-calibration">On ruining calibration</a> </li>
+  <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration in sklearn</a>, <a href="https://stats.stackexchange.com/questions/390487/why-is-logistic-regression-well-calibrated-and-how-to-ruin-its-calibration">On how calibration can fail</a> </li>
   <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction</a></li>
    <li><a href="https://stats.stackexchange.com/questions/295383/why-is-data-augmentation-classified-as-a-type-of-regularization/295394#295394">On data augmentation as regularization</a></li>     
       </ul>
