--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,7 @@
        <li>My journey from data science to statistics in an academic medical center (essay)</li> 
   <li><a href="https://arxiv.org/pdf/2108.12045.pdf">On inverse gamma priors</li>
       </ul>
-    <p>A full list of my publications can be found <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here.<a></p>
+    <p>A full list of my publications can be found <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here.</a></p>
     <p>Online discussions include
       <ul>
   <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration in sklearn</a>, <a href="https://stats.stackexchange.com/questions/390487/why-is-logistic-regression-well-calibrated-and-how-to-ruin-its-calibration">On how calibration can fail</a> </li>
