--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,8 +10,8 @@
 
 <body class="home">
 
-{% include _browser-upgrade.html %}
-{% include _navigation.html %}
+<!--{% include _browser-upgrade.html %}-->
+<!--{% include _navigation.html %}-->
 
 <div id="main" role="main">
   <div class="article-author-side">
