--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@
     <p>Recent papers include
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
-  <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR Data</a></li>
+  <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure extraction engine</a></li>
 </ul>
     </p>
