--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
     {{content}}
     <hr>
     <p>Hello! My name is Sam Weisenthal. I am studying statistics and medicine at the University of Rochester.</p>
-    <p>My research focus is on the probabilistic/statistical foundations of medical decision making.</p> 
+    <p>My research focus is on the probabilistic/statistical foundations of medical decision making. I am also interested in preventative medicine and environmental health.</p> 
     <p>Recent papers include
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
