--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,13 +24,13 @@
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
-  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure extraction engine</a></li>
+  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation dose monitoring</a></li>
 </ul>
     </p>
     <p>Works in progress include
       <ul>
   <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity</a></li>
-  <li>Optimality-based reward learning</li>
+  <li>Optimality-based reward learning with applications to toxicology</li>
   <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">Post-test probability of covid-19</a></li>
        <li>My journey from data science to statistics in an academic medical center (essay)</li> 
   <li><a href="https://arxiv.org/pdf/2108.12045.pdf">On inverse gamma priors</a></li>
