--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@
     <!--<h1>{{site.title}}</h1>-->
     {{content}}
     <hr>
-    <p>Hello! My name is Sam Weisenthal. I am studying statistics and medicine at the University of Rochester.</p>
+    <p>Hello! My name is Sam. I am studying statistics and medicine at the University of Rochester.</p>
     <p>My research focus is on the probabilistic/statistical foundations of medical decision making. I am also interested in preventative medicine and environmental health.</p> 
     <p>Recent papers include
       <ul>
