--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@
       <ul>
   <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity</a></li>
   <li><a href="https://www.proquest.com/docview/2862039876/fulltextPDF/C80E74A4A43C42DBPQ/1?accountid=13567">Optimality-based reward learning with applications to toxicology</a></li>
-  <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">Post-test probability of covid-19</a></li>
+  <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">On the post-test probability of covid-19</a></li>
        <li>My journey from data science to statistics in an academic medical center (essay)</li> 
   <li><a href="https://arxiv.org/pdf/2108.12045.pdf">On inverse gamma priors</a></li>
       </ul>
