--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,23 +18,28 @@
     <!--<h1>{{site.title}}</h1>-->
     {{content}}
     <hr>
-    <p>Hello! My name is Sam. I am studying statistics and medicine at the University of Rochester.</p>
-    <p>My research is on the probabilistic/statistical foundations of medical decision making. I am also interested in preventative medicine and environmental health.</p> 
-    <p>Recent papers include
+    <p>Hello! My name is Sam. I am studying statistics and medicine at the University of Rochester. Some of my research interests are listed below.</p>
+    <p>Medical decision making.</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
-  <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
-  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation dose monitoring</a></li>
-</ul>
-    </p>
-    <p>Works in progress include
-      <ul>
-  <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity</a></li>
-  <li><a href="https://www.proquest.com/docview/2862039876/fulltextPDF/C80E74A4A43C42DBPQ/1?accountid=13567">Optimality-based reward learning with applications to toxicology</a></li>
-  <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">On the post-test probability of covid-19</a></li>
-       <li>My journey from data science to statistics in an academic medical center (essay)</li> 
-  <li><a href="https://arxiv.org/pdf/2108.12045.pdf">On inverse gamma priors</a></li>
+     <a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity</a>
       </ul>
+
+    <p>Toxicology</p>
+      <ul>
+  <li><a href="https://www.proquest.com/docview/2862039876/fulltextPDF/C80E74A4A43C42DBPQ/1?accountid=13567">Optimality-based reward learning with applications to toxicology</a></li>
+      </ul>
+    
+    <p>Prediction and diagnosis</p>
+    <ul>
+       <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
+       <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">On the post-test probability of covid-19</a></li>
+    </ul>
+
+    <p>Radiation dose monitoring</p>
+<ul><li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation dose monitoring</a></li></ul>
+    
+  
     <p>A full list of my publications can be found <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here</a>.</p>
     <!--
     <p>Online discussions include
