--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
     {{content}}
     <hr>
     <p>Hello! My name is Sam. I am studying statistics and medicine at the University of Rochester. Some of my research interests are listed below.</p>
-    <p>Medical decision making.</p> 
+    <p>Medical decision making</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
      <a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity</a>
@@ -37,7 +37,9 @@
     </ul>
 
     <p>Radiation dose monitoring</p>
-<ul><li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation dose monitoring</a></li></ul>
+<ul>
+  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation dose monitoring</a></li>
+</ul>
     
   
     <p>A full list of my publications can be found <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here</a>.</p>
