--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,10 +22,10 @@
     <p>Medical decision making</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
-     <a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity</a>
+     <a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity (manuscript under review)</a>
       </ul>
 
-    <p>Toxicology</p>
+    <p>Environmental health</p>
       <ul>
   <li><a href="https://www.proquest.com/docview/2862039876/fulltextPDF/C80E74A4A43C42DBPQ/1?accountid=13567">Optimality-based reward learning with applications to toxicology</a></li>
       </ul>
@@ -33,7 +33,9 @@
     <p>Prediction and diagnosis</p>
     <ul>
        <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
-       <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">On the post-test probability of covid-19</a></li>
+      <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration (forum answer)</a>, <a href="https://stats.stackexchange.com/questions/390487/why-is-logistic-regression-well-calibrated-and-how-to-ruin-its-calibration">On how calibration can fail</a> </li>
+       <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">On the post-test probability of covid-19 (in progress)</a></li>
+          <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction (forum topic)</a></li>
     </ul>
 
     <p>Radiation dose monitoring</p>
@@ -46,8 +48,6 @@
     <!--
     <p>Online discussions include
       <ul>
-  <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration in sklearn</a>, <a href="https://stats.stackexchange.com/questions/390487/why-is-logistic-regression-well-calibrated-and-how-to-ruin-its-calibration">On how calibration can fail</a> </li>
-  <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction</a></li>
    <li><a href="https://stats.stackexchange.com/questions/295383/why-is-data-augmentation-classified-as-a-type-of-regularization/295394#295394">On data augmentation as regularization</a></li>     
       </ul>
     </p>
