--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@
     <p>Medical decision making</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
-    <li> <a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity (manuscript under review)</a></li>
+    <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity (manuscript under review)</a></li>
       </ul>
 
     <p>Environmental health</p>
@@ -33,7 +33,7 @@
     <p>Prediction and diagnosis</p>
     <ul>
        <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
-      <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration (forum answer)</a>, <a href="https://stats.stackexchange.com/questions/390487/why-is-logistic-regression-well-calibrated-and-how-to-ruin-its-calibration">On how calibration can fail</a> </li>
+      <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration (forum answer)</a></li>
        <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">On the post-test probability of covid-19 (in progress)</a></li>
           <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction (forum topic)</a></li>
     </ul>
