--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@
     <p>Medical decision making</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
-    <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity (manuscript under review)</a></li>
+    <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity (under review)</a></li>
       </ul>
 
     <p>Environmental health</p>
