--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
           <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction (forum topic)</a></li>
     </ul>
 
-    <p>Radiation dose monitoring</p>
+    <p>Radiation Exposure Extraction Engine</p>
 <ul>
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation dose monitoring</a></li>
 </ul>
