--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,9 +38,9 @@
           <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction (forum topic)</a></li>
     </ul>
 
-    <p>Radiation Exposure Extraction Engine</p>
+    <p>Radiation dose monitoring</p>
 <ul>
-  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation dose monitoring</a></li>
+  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">RE3</a></li>
 </ul>
     
   
