--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,18 +19,18 @@
     {{content}}
     <hr>
     <p>Hello! My name is Sam. I am studying statistics and medicine at the University of Rochester. I have been fortunate to work with many wonderful mentors and collaborators, who are listed as authors in the manuscripts below. My research interests include:</p>
-    <p>Medical decision making</p> 
+    <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
     <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity (under review)</a></li>
       </ul>
 
-    <p>Environmental health</p>
+    <p>Environmental health / inverse reinforcement learning</p>
       <ul>
   <li><a href="https://www.proquest.com/docview/2862039876/fulltextPDF/C80E74A4A43C42DBPQ/1?accountid=13567">Optimality-based reward learning with applications to toxicology</a></li>
       </ul>
     
-    <p>Prediction and diagnosis</p>
+    <p>Prediction / diagnosis / calibration / machine learning</p>
     <ul>
        <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
       <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration (forum answer)</a></li>
@@ -38,7 +38,7 @@
           <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction (forum topic)</a></li>
     </ul>
 
-    <p>Radiation dose monitoring</p>
+    <p>Radiation dose monitoring / outlier detection</p>
 <ul>
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">RE3</a></li>
 </ul>
