--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@
   <li><a href="https://www.proquest.com/docview/2862039876/fulltextPDF/C80E74A4A43C42DBPQ/1?accountid=13567">Optimality-based reward learning with applications to toxicology</a></li>
       </ul>
     
-    <p>Prediction / diagnosis / calibration / machine learning</p>
+    <p>Prediction / diagnosis / calibration </p>
     <ul>
        <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
       <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration (forum answer)</a></li>
