--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@
     <!--<h1>{{site.title}}</h1>-->
     {{content}}
     <hr>
-    <p>Hello! My name is Sam. I am studying statistics and medicine at the University of Rochester. I have listed some research projects below, on which I have been fortunate to work with many wonderful mentors and collaborators.</p>
+    <p>Hello! My name is Sam. I am studying statistics and medicine at the University of Rochester. Research interests:</p>
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
