--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,21 +27,24 @@
 
     <p>Environmental health / inverse reinforcement learning</p>
       <ul>
-  <li><a href="https://www.proquest.com/docview/2862039876/fulltextPDF/C80E74A4A43C42DBPQ/1?accountid=13567">Optimality-based reward learning with applications to toxicology</a></li>
+  <li>Optimality-based reward learning with applications to toxicology (third chapter of <a href="https://www.proquest.com/docview/2862039876/fulltextPDF/C80E74A4A43C42DBPQ/1?accountid=13567">thesis</a>)</li>
       </ul>
     
-    <p>Prediction / diagnosis / calibration </p>
+    <p>Prediction using EHR data </p>
     <ul>
        <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
-      <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration (forum answer)</a></li>
-       <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">On the post-test probability of covid-19 (in progress)</a></li>
-          <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction (forum topic)</a></li>
     </ul>
 
     <p>Radiation dose monitoring / outlier detection</p>
 <ul>
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">RE3</a></li>
 </ul>
+    <p>Blog/forum posts on diagnosis and calibration</p>
+    <ul>
+      <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration</a></li>
+       <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">On the post-test probability of covid-19</a></li>
+          <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction</a></li>
+    </ul>
     
   
     <p>A full list of my publications can be found <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here</a>.</p>
