--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@
        <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
     </ul>
 
-    <p>Radiation dose monitoring / outlier detection</p>
+    <p>Radiation dose monitoring / quality control / outlier detection</p>
 <ul>
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">RE3</a></li>
 </ul>
