--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,6 +18,9 @@
     <!--<h1>{{site.title}}</h1>-->
     {{content}}
     <hr>
+          <center>
+          <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=true#sketch" style="width:80%; height:50px;"></iframe>
+        </center>
     <p>Hello! My name is Sam. I am studying statistics and medicine at the University of Rochester. Research interests:</p>
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
