--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
     {{content}}
     <hr>
           <center>
-          <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=true#sketch" style="width:80%; height:50px;"></iframe>
+          <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     <p>Hello! My name is Sam. I am studying statistics and medicine at the University of Rochester. Research interests:</p>
     <p>Medical decision making / decision theory / reinforcement learning</p> 
