--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,9 @@
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
-    <p>Hello! My name is Sam. I am studying statistics and medicine at the University of Rochester. Research interests:</p>
+    <p>Hello! My name is Sam. I am studying statistics and medicine at the University of Rochester.</p> 
+    <p>Research interests:</p>
+    <ul>
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
@@ -52,7 +54,7 @@
           <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction</a></li>
     </ul>
     
-  
+    </ul>
     <p>A full list of my publications can be found <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here</a>.</p>
     <!--
     <p>Online discussions include
