--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
   <li>Optimality-based reward learning with applications to toxicology (third chapter of <a href="https://www.proquest.com/docview/2862039876/fulltextPDF/C80E74A4A43C42DBPQ/1?accountid=13567">thesis</a>)</li>
       </ul>
     
-    <p>Prediction using EHR data </p>
+    <p>Prediction</p>
     <ul>
        <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
     </ul>
