--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,16 +41,27 @@
     <p>Prediction</p>
     <ul>
        <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
+ <li>On calibration(<a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">forum answer</a>)</li>
     </ul>
 
     <p>Radiation dose monitoring / quality control / outlier detection</p>
 <ul>
-  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">RE3</a></li>
+  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure Extraction Engine</a></li>
 </ul>
-    <p>Blog/forum posts on diagnosis and calibration</p>
+
+<p>Large language models / diagnosis</p>
+<ul>
+  <li>ChatGPT and post-test probability(<a href="https://arxiv.org/pdf/2311.12188.pdf">preprint</a>)</li>
+</ul>
+
+    
+    <p>Diagnosis</p>
     <ul>
-      <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration</a></li>
-       <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">On the post-test probability of covid-19</a></li>
+         <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">On the post-test probability of covid-19</a></li>
+       </ul>
+
+        <p>Education</p>
+    <ul>
           <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction</a></li>
     </ul>
     
