--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,20 +49,15 @@
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure Extraction Engine</a></li>
 </ul>
 
-<p>Large language models / diagnosis</p>
+<p>Diagnosis / Covid-19 / Large language models </p>
 <ul>
-  <li>ChatGPT and post-test probability(<a href="https://arxiv.org/pdf/2311.12188.pdf">preprint</a>)</li>
-</ul>
-
-    
-    <p>Diagnosis</p>
-    <ul>
-         <li><a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">On the post-test probability of covid-19</a></li>
+  <li>ChatGPT and post-test probability (<a href="https://arxiv.org/pdf/2311.12188.pdf">preprint</a>)</li>
+         <li>On the post-test probability of covid-19 (<a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">blog post</a>)</li>
        </ul>
 
         <p>Education</p>
     <ul>
-          <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On teaching prediction</a></li>
+          <li>On teaching prediction (<a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">forum question</a>)</li>
     </ul>
     
     
