--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@
 
     <p>Environmental health / inverse reinforcement learning</p>
       <ul>
-  <li>Optimality-based reward learning with applications to toxicology (third chapter of <a href="https://www.proquest.com/docview/2862039876/fulltextPDF/C80E74A4A43C42DBPQ/1?accountid=13567">thesis</a>)</li>
+  <li>Optimality-based reward learning with applications to toxicology (third chapter of <a href="https://www.proquest.com/docview/2862039876/3E4A47C3E7D04FA6PQ/2?sourcetype=Dissertations%20&%20Theses">thesis</a>)</li>
       </ul>
     
     <p>Prediction</p>
