--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,15 +49,16 @@
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure Extraction Engine</a></li>
 </ul>
 
-<p>Diagnosis / Covid-19 / Large language models </p>
+<p>Diagnosis / Covid-19 / ChatGPT </p>
 <ul>
   <li>ChatGPT and post-test probability (<a href="https://arxiv.org/pdf/2311.12188.pdf">preprint</a>)</li>
          <li>On the post-test probability of covid-19 (<a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">blog post</a>)</li>
        </ul>
 
-        <p>Education</p>
+        <p>Teaching</p>
     <ul>
-          <li>On teaching prediction (<a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">forum question</a>)</li>
+          <li>On prediction (<a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">forum question</a>)</li>
+          <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.g6c04c86d37_0_170">Risk calculator lecture</a></li>
     </ul>
     
     
