--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,7 @@
         <p>Teaching</p>
     <ul>
           <li>On prediction (<a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">forum question</a>)</li>
-          <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.g6c04c86d37_0_170">Risk calculator lecture</a></li>
+          <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">Risk calculator lecture</a></li>
     </ul>
     
     
