--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -68,7 +68,7 @@
       </ul>
     </p>
     -->
-    <p><a href="thoughts.html" title="About Me">About Me</a></p>
+   <!-- <p><a href="thoughts.html" title="About Me">About Me</a></p>-->
 
     
     
