--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
-    <p>My research interest is at the intersection of statistics and medicine. More specific topics are listed below.</p>
+    <p>My research is at the intersection of statistics and medicine. More specific topics are listed below.</p>
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
@@ -33,7 +33,7 @@
 
     <p>Environmental health / inverse reinforcement learning</p>
       <ul>
-  <li>Optimality-based reward learning with applications to toxicology (third chapter of <a href="https://www.proquest.com/docview/2862039876/3E4A47C3E7D04FA6PQ/2?sourcetype=Dissertations%20&%20Theses">thesis</a>)</li>
+  <li>Optimality-based reward learning with applications to toxicology (<a href="https://arxiv.org/pdf/2404.04406.pdf">preprint</a>)</li>
       </ul>
     
     <p>Prediction</p>
@@ -47,13 +47,13 @@
   <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure Extraction Engine</a></li>
 </ul>
 
-<p>Diagnosis / Covid-19 / ChatGPT </p>
+<p>Diagnosis / Covid-19 / large language models </p>
 <ul>
   <li>ChatGPT and post-test probability (<a href="https://arxiv.org/pdf/2311.12188.pdf">preprint</a>)</li>
          <li>On the post-test probability of covid-19 (<a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">blog post</a>)</li>
        </ul>
 
-        <p>Teaching</p>
+        <p>Educational talks</p>
     <ul>
           <li>On prediction (<a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">forum question</a>)</li>
           <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">Risk calculator lecture</a></li>
