--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -68,7 +68,28 @@
       </ul>
     </p>
     -->
-   <!-- <p><a href="thoughts.html" title="About Me">About Me</a></p>-->
+           <p>Thoughts</p>
+    <ul>
+          <li>I try to be mindful about not anthropomorphizing statistical models. For example, when working on a method called “... - based learning,” I wanted to suggest calling it “... - aware learning,” but I stopped myself.  Anthropomorphism is great because it helps people quickly understand what you’re doing; it’s bad because it can be misleading. One needs to always consider whether the cons of being misleading outweigh the pros of quicker understanding.</li>
+          <li>Consider a guidline that administers home supplemental O2 if O2 sat is less than 88%. Putting this in the language of decision analysis, this treatment policy is pi(Supp O2=1|ox sat) = I(ox sat<88%). Is pi=I(ox sat<88%) really optimal for someone who has O2 sat 88.1%?</li>
+    <li>I don’t like: sensitivity = TP/(TP + FN). I do like: sensitivity estimates p(Test+|Dz+).</li>
+          <li>A black box predictive model can be useful in the clinic, if it is revalidated, and possibly retrained, everywhere it is used. Better understanding of a risk factor, however, can be communicated instantly, for free, around the world. Model interpretability is important.</li>
+          <li>When trying to understand a mathematical proof or argument, I often use “backtracking” and “momentum.”  Consider a proof outline
+
+Axiom
+Statement 1
+Statement 2
+Statement 3
+
+            If I am stuck on Statement 2, I don’t usually stay there for long. Instead, I backtrack to Statement 1. After having ensured that I do - truly - accept Statement 1, I then return to Statement 2. I often then do better with Statement 2.
+          Backtracking might sound like common sense, but I think there is tendency to instead linger where we get stuck.
+            Momentum:
+
+If I get stuck at Statement 2, rather than backtracking to Statement 1, I often backtrack all the way to Axiom. Then I run through Axiom, Statement 1, Statement 2. This feels to me like building up momentum, increasing the chances that I break through Statement 2.
+            I hope that backtracking and momentum might be useful to you someday as well!
+          </li>
+          
+          </ul>
 
     
     
