--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -69,7 +69,7 @@
     </p>
     -->
 
-    <p>Blog containing <a href=" https://samweisenthal.wordpress.com/2024/04/21/random-research-related-thoughts/">random research-related thoughts</a>.</p>
+    <p><a href="https://samweisenthal.wordpress.com">Blog for random research-related thoughts</a>.</p>
    
    
           
